crates/rig-derive/tests/ui/tool_context/fail_immutable_context.rs
#![allow(unused_imports)]

use classic::tool::ToolContext;
use rig_derive::rig_tool;

#[rig_tool]
fn immutable_context(
    #[rig(context)] context: &ToolContext,
) -> Result<(), portable::tool::ToolExecutionError> {
    let _ = context;
    Ok(())
}

fn main() {}
